--- a/src/css/themes/_ef-autumn.scss
+++ b/src/css/themes/_ef-autumn.scss
@@ -37,18 +37,18 @@ $cursor_fg: #0f0e06;
 .heading2 { color: #ef656a; font-weight: bold; }
 .heading3 { color: #3dbbb0; font-weight: bold; }
 .heading4 { color: #df8f6f; font-weight: bold; }
-.markdown-blockquote { color: #5f9f6f; }
-.markdown-blockquote1 { color: #5f9f6f; }
-.markdown-blockquote2 { color: #5f9f6f; }
-.markdown-blockquote3 { color: #5f9f6f; }
+.markdown-blockquote { color: #5f9f6f; font-style: italic; }
+.markdown-blockquote1 { color: #5f9f6f; font-style: italic; }
+.markdown-blockquote2 { color: #5f9f6f; font-style: italic; }
+.markdown-blockquote3 { color: #5f9f6f; font-style: italic; }
 .markdown-pre { color: #e580ea; }
 .markdown-code { color: #3dbbb0; }
 .markdown-code-starter { color: #3dbbb0; }
 .markdown-code-stopper { color: #3dbbb0; }
 .markdown-ref { color: #c48702; }
 .directive { color: #d570af; }
-.type { color: #2fa526; }
-.builtin { color: #ff7a7f; }
+.type { color: #2fa526; font-weight: bold; }
+.builtin { color: #ff7a7f; font-weight: bold; }
 .function-name { color: #3dbbb0; }
 .variable-name { color: #6fafff; }
 .constant { color: #64aa0f; }
@@ -59,30 +59,30 @@ $cursor_fg: #0f0e06;
 .regexp-starter { color: #f06a3f; }
 .regexp-stopper { color: #f06a3f; }
 .regexp-modifier { color: #f06a3f; }
-.keyword { color: #c48702; }
-.comment { color: #cf9f7f; }
-.mcomment { color: #cf9f7f; }
-.comment-starter { color: #cf9f7f; }
-.mcomment-starter { color: #cf9f7f; }
-.mcomment-stopper { color: #cf9f7f; }
+.keyword { color: #c48702; font-weight: bold; }
+.comment { color: #cf9f7f; font-style: italic; }
+.mcomment { color: #cf9f7f; font-style: italic; }
+.comment-starter { color: #cf9f7f; font-style: italic; }
+.mcomment-starter { color: #cf9f7f; font-style: italic; }
+.mcomment-stopper { color: #cf9f7f; font-style: italic; }
 .number { color: #cfbcba; }
 .operator { color: #cfbcba; }
-.error { color: #c48702; }
+.error { color: #c48702; font-weight: bold; }
 .isearch-fail { color: #f06a3f; background-color: #461204; }
 .xml-open-tag { color: #3dbbb0; }
 .xml-close-tag { color: #3dbbb0; }
 .xml-attribute { color: #6fafff; }
 .xml-entity-starter { color: #887c8a; }
 .xml-entity-stopper { color: #887c8a; }
-.xml-entity { color: #887c8a; }
+.xml-entity { color: #887c8a; font-weight: bold; }
 .xml-open-bracket { color: #887c8a; }
 .xml-close-bracket { color: #887c8a; }
 .xml-closetag-slash { color: #887c8a; }
-.xml-cdata { color: #cfbcba; }
-.xml-cdata-starter { color: #f06a3f; }
-.xml-cdata-stopper { color: #f06a3f; }
+.xml-cdata { color: #cfbcba; font-style: italic; }
+.xml-cdata-starter { color: #f06a3f; font-style: italic; }
+.xml-cdata-stopper { color: #f06a3f; font-style: italic; }
 .block-starter, .block-stopper { color: #cfbcba; }
 .exp-starter, .exp-stopper { color: #cfbcba; }
-.lisp-keyword { color: #ff7a7f; }
+.lisp-keyword { color: #ff7a7f; font-weight: bold; }
 .hyperlink { color: #c48702; }
 }
