--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -37,18 +37,18 @@ $cursor_fg: #fcf7ef;
 .heading2 { color: #bf4400; font-weight: bold; }
 .heading3 { color: #3f6faf; font-weight: bold; }
 .heading4 { color: #00824f; font-weight: bold; }
-.markdown-blockquote { color: #4f677f; }
-.markdown-blockquote1 { color: #4f677f; }
-.markdown-blockquote2 { color: #4f677f; }
-.markdown-blockquote3 { color: #4f677f; }
+.markdown-blockquote { color: #4f677f; font-style: italic; }
+.markdown-blockquote1 { color: #4f677f; font-style: italic; }
+.markdown-blockquote2 { color: #4f677f; font-style: italic; }
+.markdown-blockquote3 { color: #4f677f; font-style: italic; }
 .markdown-pre { color: #bf456a; }
 .markdown-code { color: #007a9f; }
 .markdown-code-starter { color: #007a9f; }
 .markdown-code-stopper { color: #007a9f; }
 .markdown-ref { color: #a7601f; }
 .directive { color: #9f0d0f; }
-.type { color: #444fcf; }
-.builtin { color: #557400; }
+.type { color: #444fcf; font-weight: bold; }
+.builtin { color: #557400; font-weight: bold; }
 .function-name { color: #a7601f; }
 .variable-name { color: #007a9f; }
 .constant { color: #00824f; }
@@ -59,30 +59,30 @@ $cursor_fg: #fcf7ef;
 .regexp-starter { color: #ca3400; }
 .regexp-stopper { color: #ca3400; }
 .regexp-modifier { color: #ca3400; }
-.keyword { color: #006f00; }
-.comment { color: #8f6f4a; }
-.mcomment { color: #8f6f4a; }
-.comment-starter { color: #8f6f4a; }
-.mcomment-starter { color: #8f6f4a; }
-.mcomment-stopper { color: #8f6f4a; }
+.keyword { color: #006f00; font-weight: bold; }
+.comment { color: #8f6f4a; font-style: italic; }
+.mcomment { color: #8f6f4a; font-style: italic; }
+.comment-starter { color: #8f6f4a; font-style: italic; }
+.mcomment-starter { color: #8f6f4a; font-style: italic; }
+.mcomment-stopper { color: #8f6f4a; font-style: italic; }
 .number { color: #242521; }
 .operator { color: #242521; }
-.error { color: #a7601f; }
+.error { color: #a7601f; font-weight: bold; }
 .isearch-fail { color: #dd0020; background-color: #ffd4bf; }
 .xml-open-tag { color: #a7601f; }
 .xml-close-tag { color: #a7601f; }
 .xml-attribute { color: #007a9f; }
 .xml-entity-starter { color: #59786f; }
 .xml-entity-stopper { color: #59786f; }
-.xml-entity { color: #59786f; }
+.xml-entity { color: #59786f; font-weight: bold; }
 .xml-open-bracket { color: #59786f; }
 .xml-close-bracket { color: #59786f; }
 .xml-closetag-slash { color: #59786f; }
-.xml-cdata { color: #242521; }
-.xml-cdata-starter { color: #dd0020; }
-.xml-cdata-stopper { color: #dd0020; }
+.xml-cdata { color: #242521; font-style: italic; }
+.xml-cdata-starter { color: #dd0020; font-style: italic; }
+.xml-cdata-stopper { color: #dd0020; font-style: italic; }
 .block-starter, .block-stopper { color: #242521; }
 .exp-starter, .exp-stopper { color: #242521; }
-.lisp-keyword { color: #557400; }
+.lisp-keyword { color: #557400; font-weight: bold; }
 .hyperlink { color: #a7601f; }
 }
