--- a/src/css/themes/_ef-deuteranopia-light.scss
+++ b/src/css/themes/_ef-deuteranopia-light.scss
@@ -37,18 +37,18 @@ $cursor_fg: #f5f5ff;
 .heading2 { color: #4250ef; font-weight: bold; }
 .heading3 { color: #765040; font-weight: bold; }
 .heading4 { color: #065fff; font-weight: bold; }
-.markdown-blockquote { color: #506fa0; }
-.markdown-blockquote1 { color: #506fa0; }
-.markdown-blockquote2 { color: #506fa0; }
-.markdown-blockquote3 { color: #506fa0; }
+.markdown-blockquote { color: #506fa0; font-style: italic; }
+.markdown-blockquote1 { color: #506fa0; font-style: italic; }
+.markdown-blockquote2 { color: #506fa0; font-style: italic; }
+.markdown-blockquote3 { color: #506fa0; font-style: italic; }
 .markdown-pre { color: #805d00; }
 .markdown-code { color: #1477b2; }
 .markdown-code-starter { color: #1477b2; }
 .markdown-code-stopper { color: #1477b2; }
 .markdown-ref { color: #375cd8; }
 .directive { color: #6052cf; }
-.type { color: #805d00; }
-.builtin { color: #1f6fbf; }
+.type { color: #805d00; font-weight: bold; }
+.builtin { color: #1f6fbf; font-weight: bold; }
 .function-name { color: #065fff; }
 .variable-name { color: #1477b2; }
 .constant { color: #765040; }
@@ -59,30 +59,30 @@ $cursor_fg: #f5f5ff;
 .regexp-starter { color: #965000; }
 .regexp-stopper { color: #965000; }
 .regexp-modifier { color: #965000; }
-.keyword { color: #4250ef; }
-.comment { color: #77604a; }
-.mcomment { color: #77604a; }
-.comment-starter { color: #77604a; }
-.mcomment-starter { color: #77604a; }
-.mcomment-stopper { color: #77604a; }
+.keyword { color: #4250ef; font-weight: bold; }
+.comment { color: #77604a; font-style: italic; }
+.mcomment { color: #77604a; font-style: italic; }
+.comment-starter { color: #77604a; font-style: italic; }
+.mcomment-starter { color: #77604a; font-style: italic; }
+.mcomment-stopper { color: #77604a; font-style: italic; }
 .number { color: #1a1a2f; }
 .operator { color: #1a1a2f; }
-.error { color: #765040; }
+.error { color: #765040; font-weight: bold; }
 .isearch-fail { color: #965000; background-color: #f0e0a0; }
 .xml-open-tag { color: #065fff; }
 .xml-close-tag { color: #065fff; }
 .xml-attribute { color: #1477b2; }
 .xml-entity-starter { color: #70627f; }
 .xml-entity-stopper { color: #70627f; }
-.xml-entity { color: #70627f; }
+.xml-entity { color: #70627f; font-weight: bold; }
 .xml-open-bracket { color: #70627f; }
 .xml-close-bracket { color: #70627f; }
 .xml-closetag-slash { color: #70627f; }
-.xml-cdata { color: #1a1a2f; }
-.xml-cdata-starter { color: #965000; }
-.xml-cdata-stopper { color: #965000; }
+.xml-cdata { color: #1a1a2f; font-style: italic; }
+.xml-cdata-starter { color: #965000; font-style: italic; }
+.xml-cdata-stopper { color: #965000; font-style: italic; }
 .block-starter, .block-stopper { color: #1a1a2f; }
 .exp-starter, .exp-stopper { color: #1a1a2f; }
-.lisp-keyword { color: #1f6fbf; }
+.lisp-keyword { color: #1f6fbf; font-weight: bold; }
 .hyperlink { color: #375cd8; }
 }
