--- a/src/css/themes/_ef-duo-dark.scss
+++ b/src/css/themes/_ef-duo-dark.scss
@@ -37,18 +37,18 @@ $cursor_fg: #070019;
 .heading2 { color: #6f80ff; font-weight: bold; }
 .heading3 { color: #df805f; font-weight: bold; }
 .heading4 { color: #0dafdf; font-weight: bold; }
-.markdown-blockquote { color: #8a9fdf; }
-.markdown-blockquote1 { color: #8a9fdf; }
-.markdown-blockquote2 { color: #8a9fdf; }
-.markdown-blockquote3 { color: #8a9fdf; }
+.markdown-blockquote { color: #8a9fdf; font-style: italic; }
+.markdown-blockquote1 { color: #8a9fdf; font-style: italic; }
+.markdown-blockquote2 { color: #8a9fdf; font-style: italic; }
+.markdown-blockquote3 { color: #8a9fdf; font-style: italic; }
 .markdown-pre { color: #e580ea; }
 .markdown-code { color: #0dafdf; }
 .markdown-code-starter { color: #0dafdf; }
 .markdown-code-stopper { color: #0dafdf; }
 .markdown-ref { color: #7fafff; }
 .directive { color: #7fafff; }
-.type { color: #029fff; }
-.builtin { color: #5faaef; }
+.type { color: #029fff; font-weight: bold; }
+.builtin { color: #5faaef; font-weight: bold; }
 .function-name { color: #0dafdf; }
 .variable-name { color: #af85ff; }
 .constant { color: #379cf6; }
@@ -59,30 +59,30 @@ $cursor_fg: #070019;
 .regexp-starter { color: #df805f; }
 .regexp-stopper { color: #df805f; }
 .regexp-modifier { color: #df805f; }
-.keyword { color: #6f80ff; }
-.comment { color: #d08f72; }
-.mcomment { color: #d08f72; }
-.comment-starter { color: #d08f72; }
-.mcomment-starter { color: #d08f72; }
-.mcomment-stopper { color: #d08f72; }
+.keyword { color: #6f80ff; font-weight: bold; }
+.comment { color: #d08f72; font-style: italic; }
+.mcomment { color: #d08f72; font-style: italic; }
+.comment-starter { color: #d08f72; font-style: italic; }
+.mcomment-starter { color: #d08f72; font-style: italic; }
+.mcomment-stopper { color: #d08f72; font-style: italic; }
 .number { color: #d0d0d0; }
 .operator { color: #d0d0d0; }
-.error { color: #c48702; }
+.error { color: #c48702; font-weight: bold; }
 .isearch-fail { color: #ef656a; background-color: #461210; }
 .xml-open-tag { color: #0dafdf; }
 .xml-close-tag { color: #0dafdf; }
 .xml-attribute { color: #af85ff; }
 .xml-entity-starter { color: #857f8f; }
 .xml-entity-stopper { color: #857f8f; }
-.xml-entity { color: #857f8f; }
+.xml-entity { color: #857f8f; font-weight: bold; }
 .xml-open-bracket { color: #857f8f; }
 .xml-close-bracket { color: #857f8f; }
 .xml-closetag-slash { color: #857f8f; }
-.xml-cdata { color: #d0d0d0; }
-.xml-cdata-starter { color: #ef656a; }
-.xml-cdata-stopper { color: #ef656a; }
+.xml-cdata { color: #d0d0d0; font-style: italic; }
+.xml-cdata-starter { color: #ef656a; font-style: italic; }
+.xml-cdata-stopper { color: #ef656a; font-style: italic; }
 .block-starter, .block-stopper { color: #d0d0d0; }
 .exp-starter, .exp-stopper { color: #d0d0d0; }
-.lisp-keyword { color: #5faaef; }
+.lisp-keyword { color: #5faaef; font-weight: bold; }
 .hyperlink { color: #7fafff; }
 }
