--- a/src/css/themes/_ef-duo-light.scss
+++ b/src/css/themes/_ef-duo-light.scss
@@ -37,18 +37,18 @@ $cursor_fg: #fff8f0;
 .heading2 { color: #4250ef; font-weight: bold; }
 .heading3 { color: #8f5a3a; font-weight: bold; }
 .heading4 { color: #6052cf; font-weight: bold; }
-.markdown-blockquote { color: #406f90; }
-.markdown-blockquote1 { color: #406f90; }
-.markdown-blockquote2 { color: #406f90; }
-.markdown-blockquote3 { color: #406f90; }
+.markdown-blockquote { color: #406f90; font-style: italic; }
+.markdown-blockquote1 { color: #406f90; font-style: italic; }
+.markdown-blockquote2 { color: #406f90; font-style: italic; }
+.markdown-blockquote3 { color: #406f90; font-style: italic; }
 .markdown-pre { color: #cf25aa; }
 .markdown-code { color: #1f77bb; }
 .markdown-code-starter { color: #1f77bb; }
 .markdown-code-stopper { color: #1f77bb; }
 .markdown-ref { color: #1f6fbf; }
 .directive { color: #3f70a0; }
-.type { color: #065fff; }
-.builtin { color: #1f77bb; }
+.type { color: #065fff; font-weight: bold; }
+.builtin { color: #1f77bb; font-weight: bold; }
 .function-name { color: #1f6fbf; }
 .variable-name { color: #6052cf; }
 .constant { color: #375cd8; }
@@ -59,30 +59,30 @@ $cursor_fg: #fff8f0;
 .regexp-starter { color: #9f4a00; }
 .regexp-stopper { color: #9f4a00; }
 .regexp-modifier { color: #9f4a00; }
-.keyword { color: #4250ef; }
-.comment { color: #a2403f; }
-.mcomment { color: #a2403f; }
-.comment-starter { color: #a2403f; }
-.mcomment-starter { color: #a2403f; }
-.mcomment-stopper { color: #a2403f; }
+.keyword { color: #4250ef; font-weight: bold; }
+.comment { color: #a2403f; font-style: italic; }
+.mcomment { color: #a2403f; font-style: italic; }
+.comment-starter { color: #a2403f; font-style: italic; }
+.mcomment-starter { color: #a2403f; font-style: italic; }
+.mcomment-stopper { color: #a2403f; font-style: italic; }
 .number { color: #222222; }
 .operator { color: #222222; }
-.error { color: #8a5d00; }
+.error { color: #8a5d00; font-weight: bold; }
 .isearch-fail { color: #cc3333; background-color: #ffdfe6; }
 .xml-open-tag { color: #1f6fbf; }
 .xml-close-tag { color: #1f6fbf; }
 .xml-attribute { color: #6052cf; }
 .xml-entity-starter { color: #63728f; }
 .xml-entity-stopper { color: #63728f; }
-.xml-entity { color: #63728f; }
+.xml-entity { color: #63728f; font-weight: bold; }
 .xml-open-bracket { color: #63728f; }
 .xml-close-bracket { color: #63728f; }
 .xml-closetag-slash { color: #63728f; }
-.xml-cdata { color: #222222; }
-.xml-cdata-starter { color: #cc3333; }
-.xml-cdata-stopper { color: #cc3333; }
+.xml-cdata { color: #222222; font-style: italic; }
+.xml-cdata-starter { color: #cc3333; font-style: italic; }
+.xml-cdata-stopper { color: #cc3333; font-style: italic; }
 .block-starter, .block-stopper { color: #222222; }
 .exp-starter, .exp-stopper { color: #222222; }
-.lisp-keyword { color: #1f77bb; }
+.lisp-keyword { color: #1f77bb; font-weight: bold; }
 .hyperlink { color: #1f6fbf; }
 }
