--- a/src/css/themes/_ef-frost.scss
+++ b/src/css/themes/_ef-frost.scss
@@ -37,18 +37,18 @@ $cursor_fg: #fcffff;
 .heading2 { color: #00845f; font-weight: bold; }
 .heading3 { color: #7f5ae0; font-weight: bold; }
 .heading4 { color: #1f6fbf; font-weight: bold; }
-.markdown-blockquote { color: #605f9f; }
-.markdown-blockquote1 { color: #605f9f; }
-.markdown-blockquote2 { color: #605f9f; }
-.markdown-blockquote3 { color: #605f9f; }
+.markdown-blockquote { color: #605f9f; font-style: italic; }
+.markdown-blockquote1 { color: #605f9f; font-style: italic; }
+.markdown-blockquote2 { color: #605f9f; font-style: italic; }
+.markdown-blockquote3 { color: #605f9f; font-style: italic; }
 .markdown-pre { color: #c0469a; }
 .markdown-code { color: #007a85; }
 .markdown-code-starter { color: #007a85; }
 .markdown-code-stopper { color: #007a85; }
 .markdown-ref { color: #1f6fbf; }
 .directive { color: #aa44c5; }
-.type { color: #7f5ae0; }
-.builtin { color: #1f6fbf; }
+.type { color: #7f5ae0; font-weight: bold; }
+.builtin { color: #1f6fbf; font-weight: bold; }
 .function-name { color: #00845f; }
 .variable-name { color: #3a6dd2; }
 .constant { color: #065fff; }
@@ -59,30 +59,30 @@ $cursor_fg: #fcffff;
 .regexp-starter { color: #4244ef; }
 .regexp-stopper { color: #4244ef; }
 .regexp-modifier { color: #4244ef; }
-.keyword { color: #004fc0; }
-.comment { color: #7a5f2f; }
-.mcomment { color: #7a5f2f; }
-.comment-starter { color: #7a5f2f; }
-.mcomment-starter { color: #7a5f2f; }
-.mcomment-stopper { color: #7a5f2f; }
+.keyword { color: #004fc0; font-weight: bold; }
+.comment { color: #7a5f2f; font-style: italic; }
+.mcomment { color: #7a5f2f; font-style: italic; }
+.comment-starter { color: #7a5f2f; font-style: italic; }
+.mcomment-starter { color: #7a5f2f; font-style: italic; }
+.mcomment-stopper { color: #7a5f2f; font-style: italic; }
 .number { color: #232323; }
 .operator { color: #232323; }
-.error { color: #996c4f; }
+.error { color: #996c4f; font-weight: bold; }
 .isearch-fail { color: #c42d2f; background-color: #ffdfda; }
 .xml-open-tag { color: #00845f; }
 .xml-close-tag { color: #00845f; }
 .xml-attribute { color: #3a6dd2; }
 .xml-entity-starter { color: #66657f; }
 .xml-entity-stopper { color: #66657f; }
-.xml-entity { color: #66657f; }
+.xml-entity { color: #66657f; font-weight: bold; }
 .xml-open-bracket { color: #66657f; }
 .xml-close-bracket { color: #66657f; }
 .xml-closetag-slash { color: #66657f; }
-.xml-cdata { color: #232323; }
-.xml-cdata-starter { color: #c42d2f; }
-.xml-cdata-stopper { color: #c42d2f; }
+.xml-cdata { color: #232323; font-style: italic; }
+.xml-cdata-starter { color: #c42d2f; font-style: italic; }
+.xml-cdata-stopper { color: #c42d2f; font-style: italic; }
 .block-starter, .block-stopper { color: #232323; }
 .exp-starter, .exp-stopper { color: #232323; }
-.lisp-keyword { color: #1f6fbf; }
+.lisp-keyword { color: #1f6fbf; font-weight: bold; }
 .hyperlink { color: #1f6fbf; }
 }
