--- a/src/css/themes/_ef-maris-dark.scss
+++ b/src/css/themes/_ef-maris-dark.scss
@@ -37,18 +37,18 @@ $cursor_fg: #131c2b;
 .heading2 { color: #7fce5f; font-weight: bold; }
 .heading3 { color: #2fd0db; font-weight: bold; }
 .heading4 { color: #cf90ff; font-weight: bold; }
-.markdown-blockquote { color: #99bfcf; }
-.markdown-blockquote1 { color: #99bfcf; }
-.markdown-blockquote2 { color: #99bfcf; }
-.markdown-blockquote3 { color: #99bfcf; }
+.markdown-blockquote { color: #99bfcf; font-style: italic; }
+.markdown-blockquote1 { color: #99bfcf; font-style: italic; }
+.markdown-blockquote2 { color: #99bfcf; font-style: italic; }
+.markdown-blockquote3 { color: #99bfcf; font-style: italic; }
 .markdown-pre { color: #fa90ea; }
 .markdown-code { color: #65d5a8; }
 .markdown-code-starter { color: #65d5a8; }
 .markdown-code-stopper { color: #65d5a8; }
 .markdown-ref { color: #57b0ff; }
 .directive { color: #cf90ff; }
-.type { color: #41bf4f; }
-.builtin { color: #d4aaf0; }
+.type { color: #41bf4f; font-weight: bold; }
+.builtin { color: #d4aaf0; font-weight: bold; }
 .function-name { color: #7fce5f; }
 .variable-name { color: #2fd0db; }
 .constant { color: #12b4ff; }
@@ -59,30 +59,30 @@ $cursor_fg: #131c2b;
 .regexp-starter { color: #65d5a8; }
 .regexp-stopper { color: #65d5a8; }
 .regexp-modifier { color: #65d5a8; }
-.keyword { color: #70a0ff; }
-.comment { color: #eaa4a4; }
-.mcomment { color: #eaa4a4; }
-.comment-starter { color: #eaa4a4; }
-.mcomment-starter { color: #eaa4a4; }
-.mcomment-stopper { color: #eaa4a4; }
+.keyword { color: #70a0ff; font-weight: bold; }
+.comment { color: #eaa4a4; font-style: italic; }
+.mcomment { color: #eaa4a4; font-style: italic; }
+.comment-starter { color: #eaa4a4; font-style: italic; }
+.mcomment-starter { color: #eaa4a4; font-style: italic; }
+.mcomment-stopper { color: #eaa4a4; font-style: italic; }
 .number { color: #eaedef; }
 .operator { color: #eaedef; }
-.error { color: #f0c060; }
+.error { color: #f0c060; font-weight: bold; }
 .isearch-fail { color: #ff7a5f; background-color: #551327; }
 .xml-open-tag { color: #7fce5f; }
 .xml-close-tag { color: #7fce5f; }
 .xml-attribute { color: #2fd0db; }
 .xml-entity-starter { color: #969faf; }
 .xml-entity-stopper { color: #969faf; }
-.xml-entity { color: #969faf; }
+.xml-entity { color: #969faf; font-weight: bold; }
 .xml-open-bracket { color: #969faf; }
 .xml-close-bracket { color: #969faf; }
 .xml-closetag-slash { color: #969faf; }
-.xml-cdata { color: #eaedef; }
-.xml-cdata-starter { color: #ff7a5f; }
-.xml-cdata-stopper { color: #ff7a5f; }
+.xml-cdata { color: #eaedef; font-style: italic; }
+.xml-cdata-starter { color: #ff7a5f; font-style: italic; }
+.xml-cdata-stopper { color: #ff7a5f; font-style: italic; }
 .block-starter, .block-stopper { color: #eaedef; }
 .exp-starter, .exp-stopper { color: #eaedef; }
-.lisp-keyword { color: #d4aaf0; }
+.lisp-keyword { color: #d4aaf0; font-weight: bold; }
 .hyperlink { color: #57b0ff; }
 }
