--- a/src/css/themes/_ef-maris-light.scss
+++ b/src/css/themes/_ef-maris-light.scss
@@ -37,18 +37,18 @@ $cursor_fg: #edf4f8;
 .heading2 { color: #3a6f00; font-weight: bold; }
 .heading3 { color: #1f66af; font-weight: bold; }
 .heading4 { color: #5f2fba; font-weight: bold; }
-.markdown-blockquote { color: #3f627f; }
-.markdown-blockquote1 { color: #3f627f; }
-.markdown-blockquote2 { color: #3f627f; }
-.markdown-blockquote3 { color: #3f627f; }
+.markdown-blockquote { color: #3f627f; font-style: italic; }
+.markdown-blockquote1 { color: #3f627f; font-style: italic; }
+.markdown-blockquote2 { color: #3f627f; font-style: italic; }
+.markdown-blockquote3 { color: #3f627f; font-style: italic; }
 .markdown-pre { color: #9a3a6a; }
 .markdown-code { color: #006f70; }
 .markdown-code-starter { color: #006f70; }
 .markdown-code-stopper { color: #006f70; }
 .markdown-ref { color: #375cc6; }
 .directive { color: #5f2fba; }
-.type { color: #007010; }
-.builtin { color: #6a4a9f; }
+.type { color: #007010; font-weight: bold; }
+.builtin { color: #6a4a9f; font-weight: bold; }
 .function-name { color: #3a6f00; }
 .variable-name { color: #1f66af; }
 .constant { color: #003faf; }
@@ -59,30 +59,30 @@ $cursor_fg: #edf4f8;
 .regexp-starter { color: #006f70; }
 .regexp-stopper { color: #006f70; }
 .regexp-modifier { color: #006f70; }
-.keyword { color: #444fcf; }
-.comment { color: #8b4052; }
-.mcomment { color: #8b4052; }
-.comment-starter { color: #8b4052; }
-.mcomment-starter { color: #8b4052; }
-.mcomment-stopper { color: #8b4052; }
+.keyword { color: #444fcf; font-weight: bold; }
+.comment { color: #8b4052; font-style: italic; }
+.mcomment { color: #8b4052; font-style: italic; }
+.comment-starter { color: #8b4052; font-style: italic; }
+.mcomment-starter { color: #8b4052; font-style: italic; }
+.mcomment-stopper { color: #8b4052; font-style: italic; }
 .number { color: #151a27; }
 .operator { color: #151a27; }
-.error { color: #8b4400; }
+.error { color: #8b4400; font-weight: bold; }
 .isearch-fail { color: #d00000; background-color: #f2c2b5; }
 .xml-open-tag { color: #3a6f00; }
 .xml-close-tag { color: #3a6f00; }
 .xml-attribute { color: #1f66af; }
 .xml-entity-starter { color: #676470; }
 .xml-entity-stopper { color: #676470; }
-.xml-entity { color: #676470; }
+.xml-entity { color: #676470; font-weight: bold; }
 .xml-open-bracket { color: #676470; }
 .xml-close-bracket { color: #676470; }
 .xml-closetag-slash { color: #676470; }
-.xml-cdata { color: #151a27; }
-.xml-cdata-starter { color: #d00000; }
-.xml-cdata-stopper { color: #d00000; }
+.xml-cdata { color: #151a27; font-style: italic; }
+.xml-cdata-starter { color: #d00000; font-style: italic; }
+.xml-cdata-stopper { color: #d00000; font-style: italic; }
 .block-starter, .block-stopper { color: #151a27; }
 .exp-starter, .exp-stopper { color: #151a27; }
-.lisp-keyword { color: #6a4a9f; }
+.lisp-keyword { color: #6a4a9f; font-weight: bold; }
 .hyperlink { color: #375cc6; }
 }
