--- a/src/css/themes/_standard-light.scss
+++ b/src/css/themes/_standard-light.scss
@@ -37,18 +37,18 @@ $cursor_fg: #ffffff;
 .heading2 { color: #a0522d; font-weight: bold; }
 .heading3 { color: #800080; font-weight: bold; }
 .heading4 { color: #b22222; font-weight: bold; }
-.markdown-blockquote { color: #8b2252; }
-.markdown-blockquote1 { color: #8b2252; }
-.markdown-blockquote2 { color: #8b2252; }
-.markdown-blockquote3 { color: #8b2252; }
+.markdown-blockquote { color: #8b2252; font-style: italic; }
+.markdown-blockquote1 { color: #8b2252; font-style: italic; }
+.markdown-blockquote2 { color: #8b2252; font-style: italic; }
+.markdown-blockquote3 { color: #8b2252; font-style: italic; }
 .markdown-pre { color: #8b2252; }
 .markdown-code { color: #008b8b; }
 .markdown-code-starter { color: #008b8b; }
 .markdown-code-stopper { color: #008b8b; }
 .markdown-ref { color: #3a5fcd; }
 .directive { color: #483d8b; }
-.type { color: #228b22; }
-.builtin { color: #483d8b; }
+.type { color: #228b22; font-weight: bold; }
+.builtin { color: #483d8b; font-weight: bold; }
 .function-name { color: #0000ff; }
 .variable-name { color: #a0522d; }
 .constant { color: #008b8b; }
@@ -59,30 +59,30 @@ $cursor_fg: #ffffff;
 .regexp-starter { color: #8b2252; }
 .regexp-stopper { color: #8b2252; }
 .regexp-modifier { color: #8b2252; }
-.keyword { color: #800080; }
-.comment { color: #b22222; }
-.mcomment { color: #b22222; }
-.comment-starter { color: #b22222; }
-.mcomment-starter { color: #b22222; }
-.mcomment-stopper { color: #b22222; }
+.keyword { color: #800080; font-weight: bold; }
+.comment { color: #b22222; font-style: italic; }
+.mcomment { color: #b22222; font-style: italic; }
+.comment-starter { color: #b22222; font-style: italic; }
+.mcomment-starter { color: #b22222; font-style: italic; }
+.mcomment-stopper { color: #b22222; font-style: italic; }
 .number { color: #000000; }
 .operator { color: #000000; }
-.error { color: #b6532f; }
+.error { color: #b6532f; font-weight: bold; }
 .isearch-fail { color: #000000; background-color: #ff8f88; }
 .xml-open-tag { color: #0000ff; }
 .xml-close-tag { color: #0000ff; }
 .xml-attribute { color: #a0522d; }
 .xml-entity-starter { color: #7f7f7f; }
 .xml-entity-stopper { color: #7f7f7f; }
-.xml-entity { color: #7f7f7f; }
+.xml-entity { color: #7f7f7f; font-weight: bold; }
 .xml-open-bracket { color: #7f7f7f; }
 .xml-close-bracket { color: #7f7f7f; }
 .xml-closetag-slash { color: #7f7f7f; }
-.xml-cdata { color: #000000; }
-.xml-cdata-starter { color: #e00033; }
-.xml-cdata-stopper { color: #e00033; }
+.xml-cdata { color: #000000; font-style: italic; }
+.xml-cdata-starter { color: #e00033; font-style: italic; }
+.xml-cdata-stopper { color: #e00033; font-style: italic; }
 .block-starter, .block-stopper { color: #000000; }
 .exp-starter, .exp-stopper { color: #000000; }
-.lisp-keyword { color: #483d8b; }
+.lisp-keyword { color: #483d8b; font-weight: bold; }
 .hyperlink { color: #3a5fcd; }
 }
